--- a/src/styles/nprogress.css
+++ b/src/styles/nprogress.css
@@ -4,13 +4,11 @@
 }
 
 #nprogress .bar {
-  background: #0e1111;
-
+  background-color: #2ecc71;
   position: fixed;
   z-index: 1031;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 2px;
 }
